# bundecto

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
bundecto/: __init__.py  __main__.py  editor.py
